# genai-music-lab

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: ask_issues_template.md  data_aquisition_template.md  data_creation_template.md  experiment_issues_template.md  explore_issues_template.md  model_issues_templates.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: black.yaml
config/: main.yaml
docs/: api-reference.md  how-to-guides.md  index.md  prompt-example.md
notebooks/: ABC-format-appraoch.ipynb  Notes.ipynb  S01-Project-Overview.ipynb  S02-Beethoven-Sonatas-Download-Archive.ipynb  S03-MIDI-to-Text-Representation.ipynb  S04-Training-Dataset-Creation.ipynb  S05-Chucking.ipynb  auto-gen-example-01.ipynb  fine-tuning-cost.ipynb  fine-tuning-gpt35-turbo.ipynb  from-chatgpt-to-midi.ipynb  music_v01.ipynb  music_v02.ipynb
src/: training_dataset.py
src/genaimusiclab/: utils.py
