[tool.poetry]
name = "genaimusiclab"
version = "0.1.0"
description = "Experiment with Generative AI music createion"
authors = ["Marcos Aguilera Keyser <marcosak@gmail.com>"]
license = "Internal Use Only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "0.0.285"
unstructured = { version = "0.10.12", extras = ["pdf"] }
tiktoken = "0.4.0"
chromadb = "0.4.10"
azure-ai-ml = "1.10.0"
azure-identity = "1.14.0"
llama-index = "0.8.27"
gradio = "3.44.3"
wandb = "0.15.10"
transformers = "4.33.1"
datasets = "2.14.5"
sentence-transformers = "2.2.2"
spacy = "3.6.1"

[tool.poetry.dev-dependencies]
black = { version = "23.7.0", extras = ["jupyter"] }
hydra-core = "1.3.2"
ipykernel = "6.24.0"
mkdocs = "1.4.3"
mkdocs-git-revision-date-localized-plugin = "1.2.0"
mkdocs-material = "9.1.19"
mkdocs-mermaid2-plugin = "1.0.1"
mkdocstrings-python = "1.2.0"
pre-commit = "3.3.3"
pymarkdownlnt = "0.9.13.4"
pytest = "7.4.0"
pytest-benchmark = "4.0.0"
pytest-xdist = "3.3.1"
rope = "1.9.0"
ruff = "0.0.278"

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
nbconvert = "^7.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py39']
include = """
(
    ^notebooks/.*\\.ipynb$
  | ^src/.*\\.py$
)
"""

[tool.ruff]
select = ["ALL"]
# To ignore all rules with a common pre-fix use *
ignore = ["ANN001", "ANN002", "ANN003", "ANN101", "ANN102", "ANN201", "ANN202",
"ANN204", "ANN205", "ANN206", "ANN401"]

# Decrease the maximum line length to 79 characters.
line-length = 79
# To opt in to linting Jupyter Notebook
# The include parameter is for Jupyter Notebooks and not
# for Jupyter Notebook in VS Code. Jupyter Notebook in
# VSCode isn't supported yet:
# https://github.com/astral-sh/ruff-vscode/issues/256
# See also discussion on Discord
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]

[tool.pymarkdown]
disable-rules = ["MD046"]